--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
   <section class="apresentacao" id="inicio">
     <article class="apresentacao_textos_links">
     <div class="apresentacao-texto">
-      <h1>Olá, meu nome é Douglas Araujo e construo programas web, sou estudante de programação</h1>
-      <p><em>Olá, meu nome é Douglas Araujo, sou estudante de programação e estou aprendendo a criar sites com HTML e CSS. Atualmente estou no curso de Análise e Desenvolvimento de Software.</em></p>
+      <h1>Olá, sou Douglas Araujo e desenvolvo interfaces criativos e responsivos, podendo trabalhar tanto Front-end quanto Back-end.</h1>
+      <p><em>Meu nome é Douglas Araujo de Brito e tenho 18 anos, sou estudante de TI e sou capaz desenvolver páginas web no Front e Back-end posuindo 6 meses de experiência na área, além de desenvolvimento Front e Back, possuo habilidades em cibersegurança e informática como o pacote office e hardware. Atualmente estou realizando mais cursos para me profissionslizar mais e melhorar mais as minhas técnicas.</em></p>
     </div>
     
   <nav class="icones_sites">  
