--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   <section class="apresentacao" id="inicio">
     <article class="apresentacao_textos_links">
     <div class="apresentacao-texto">
-      <h1>Olá, sou Douglas Araujo e desenvolvo interfaces criativos e responsivos, podendo trabalhar tanto Front-end quanto Back-end.</h1>
+      <h1>Olá, sou Douglas Araujo e desenvolvo interfaces criativos e responsivos, podendo atuar tanto Front-end quanto Back-end.</h1>
       <p><em>Meu nome é Douglas Araujo de Brito e tenho 18 anos, sou estudante de TI e sou capaz desenvolver páginas web no Front e Back-end posuindo 6 meses de experiência na área, além de desenvolvimento Front e Back, possuo habilidades em cibersegurança e informática como o pacote office e hardware. Atualmente estou realizando mais cursos para me profissionslizar mais e melhorar mais as minhas técnicas.</em></p>
     </div>
     
